2013-03-04  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	lib/PandoraFMS/DataServer.pm: Clean code and fix some
	forgotten changes in last GIS code

2013-03-04  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Update fired alert counts when 
	use validate_all_alerts option

2013-03-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/DB.pm,
	  lib/PandoraFMS/DataServer.pm: Refactored some GIS code. Still needs
	  testing.

2013-02-28  Sancho Lerena <slerena@artica.es>

	* Config.pm: updated version.

	* NetworkServer.pm,
	PluginServer.pm: Fixed some more un-init values and removed annoying 
	message and not useful warning about empty return on SNMP call.

2013-02-28  Dario Rodriguez <dario@artica.es>

	* lib/PandoraFMS/DataServer.pm: Added feature to update custom field
	on every XML process only with learning mode enabled.

2013-02-28  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Removed several "Use of uninitialized i
	value in string" errors.

	* lib/PandoraFMS/Core.pm: Fixed more ugly notices due uninitialized vars.

	* util/recon_scripts/snmpdevices.pl: Fixed due new interface.
 
2013-02-28  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Undid the previous commit since forking after
	  having launched all server threads can lead to trouble.

	* lib/PandoraFMS/Core.pm: Removed some debugging code that polluted the
	  logs.
	
	* lib/PandoraFMS/NetworkServer.pm: Removed a DISTINCT from the query since
	  module ids are unique.

2013-02-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: erased lost develop traces.

2013-02-25  Sancho Lerena <slerena@artica.es>

	* PandoraFMS/Config.pm: Fixed parsing of mta_from, avoiding problems
	on blank spaces.

2013-02-25  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Delay the backgrounding of the main process to
	  make log messages available when starting from the init script.
